Updated to include Media Queries.

--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
 </head>
 <body>
 <script src="scripts.js"></script>
+<div class = "main-body">
 <h1>Magic: the Gathering - An Introduction</h1>
 
-<table class="image" align="right">
+<table class="Arlinn">
 <tr><td><img id="Arlinn" src="Arlinn.jpg" onclick="Transform();"></td></tr>
 <tr><td class="caption">Click on Arlinn to Transform her!</td></tr>
 </table>
@@ -78,5 +79,6 @@
 <a href="http://magic.wizards.com/en">Magic:the Gathering Official Website</a><br>
 <a href="http://starcitygames.com">Star City Games</a><br>
 <a href="http://channelfireball.com">Channel Fireball</a>
+</div>
 </body>
 </html>
